--- a/project.config.json
+++ b/project.config.json
@@ -28,13 +28,31 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 1,
+			"list": [
+				{
+					"id": -1,
+					"name": "shoplist",
+					"pathName": "pages/shopList/shopList",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "shopdetail",
+					"pathName": "pages/shopDetail/shopDetail",
+					"scene": null
+				}
+			]
 		}
 	}
 }
