--- a/project.config.json
+++ b/project.config.json
@@ -14,11 +14,13 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.1",
 	"appid": "wx0d9e16a78c3ee596",
-	"projectname": "%E6%96%B0%E5%BB%BA%E6%96%87%E4%BB%B6%E5%A4%B9",
+	"projectname": "%E5%BF%AB%E7%82%B9%E5%AF%84%E5%AD%98",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
