--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -52,6 +52,13 @@
 					"id": -1,
 					"name": "shopdetail",
 					"pathName": "pages/shopDetail/shopDetail",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "makeorder",
+					"pathName": "pages/makeOrder/makeOrder",
 					"scene": null
 				}
 			]
