--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 5,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -81,6 +81,12 @@
 					"name": "search",
 					"pathName": "pages/search/search",
 					"query": "latitude=32.0611187789&longitude=118.7664127350",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "loading",
+					"pathName": "pages/loading/loading",
 					"scene": null
 				}
 			]
